<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg_left"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp" 
        android:gravity="center">

        <ImageView
            android:id="@+id/userInfo_imageView_header"
            android:layout_width="165dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_image_defaultTips"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/user_default_header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userInfo_textView_job"
                style="@style/userInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInfo_job"
                android:visibility="gone" />

            <TextView
                android:id="@+id/userInfo_textView_name"
                style="@style/userInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInfo_name" />

            <TextView
                android:id="@+id/userInfo_textView_id"
                style="@style/userInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInfo_No" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/userInfo_star"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/userInfo_layout_starContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>